--- a/index.html
+++ b/index.html
@@ -15,62 +15,32 @@
   </head>
   <body>
     <header>
-      <a href="#">
-        <i class="fas fa-laptop-code"></i>
-      </a>
-      <h1>Welcome to<br />The Front-End Web Development <br />Coding Quiz!!!</h1>
-      <p class="description">
-        The following quiz is comprised of 10 questions out of 100 points. You have 30 seconds to answer each question. If you run out of
-        time, or get the question wrong, your score will be deducted by 10
-        points. At the end of the quiz, scores are tallied and high scores can
-        be accessed by clicking on the "high scores" button below.
-      </p>
+      <IMG SRC="./assets/NAHlogo.png" ALT="">
+      <h1>GET STARTED</h1>
     </header>
     <main>
         <section id="quizSection">
-          <div id="quizHeaders">
-            <h1>Question... <span id="question">1</span> of 10</h1>
-            <h1 id="scoreBoard"><span id="currentScore">0</span> Points</h1>
-          </div>
-          <div id="quizQuestion">
-            <h3>What does HTML stand for?</h3>
-          </div>
-          <div id="hideItems">
-          <div id="successMessage">
-            <h1>Congratulations! You've completed your quiz</h1>
-          </div>
-          <div id="displayHighScores">
-            <h2>High Scores</h2>
-            <p>Name: <span id="highScoreName"></span> Score: <span id="highScorePoints"></span></p>
-            <h4>Your Score: <span id="yourHighScore"></span></h4>
-            <p>Enter your name below to record your score</p>
-            <input id="nameInput" type="text" placeholder="John Smith" name="nameInput" />
-            <a href="#" id="nameSubmit" class="btn">Submit</a>
-          </div>
-        </div>
-          <div id="choices">
-            <input type="radio" id="1">Hyper-Text-Markup-Language</input>
-            <br>
-            <input type="radio" id="2">Hyper-Text-Markup-Language</input>
-            <br>
-            <input type="radio" id="3">Hyper-Text-Markup-Language</input>
-            <br>
-            <input type="radio" id="4">Hyper-Text-Markup-Language</input>
-          </div>
-          <div id="solution" class="solution"></div>
-          <div id="timerValue">
-              <h3>Time Left</h3>
-              <h3 id="countdown"></h3>
-          </div>
+            <div id="quizHeaders">
+              <div id="statusBar"></div>
+            </div>
+            <div id="quizQuestion">
+              <h1>Would You Like To Own Your Own Home?</h1>
+            </div>
+            <div id="successMessage">
+              <h1>Congratulations! You've completed your approval questionnaire!</h1>
+            </div>
+            <div id="choices">
+              <input type="radio" id="1">Hyper-Text-Markup-Language</input>
+              <br>
+              <input type="radio" id="2">Hyper-Text-Markup-Language</input>
+              <br>
+              <input type="radio" id="3">Hyper-Text-Markup-Language</input>
+              <br>
+              <input type="radio" id="4">Hyper-Text-Markup-Language</input>
+            </div>
         </section>
         <section id="buttons">
-          <button id="startQuiz" class="btn start">START</button>
-          <button  id="viewHighScores" class="btn start">HIGH SCORES</a>
-        </section>
-        <section id="directions">
-          <p id="directions">
-          <br />Press the "Start" above to start the quiz. <br />Good luck!
-            </p>
+          <button id="Next" class="btn start">Yes! I Would Like To Own My Own Home</button>
         </section>
     </main>
     <script src="./assets/js/script.js"></script>
