updated event listener in JS

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div id="quizQuestion">
               <h1>Would You Like To Own Your Own Home?</h1>
             </div>
-            <div id="successMessage">
+            <div id="successMessage" hidden>
               <h1>Congratulations! You've completed your approval questionnaire!</h1>
             </div>
-            <div id="choices">
+            <div id="choices" hidden >
               <input type="radio" id="1">Hyper-Text-Markup-Language</input>
               <br>
               <input type="radio" id="2">Hyper-Text-Markup-Language</input>
@@ -40,7 +40,7 @@
             </div>
         </section>
         <section id="buttons">
-          <button id="Next" class="btn start">Yes! I Would Like To Own My Own Home</button>
+          <button id="startQuiz" class="btn start">Yes! I Would Like To Own My Own Home</button>
         </section>
     </main>
     <script src="./assets/js/script.js"></script>
